# advent-of-code

./: .gitignore  LICENSE  README.md  adventocaml.opam  dune-project  gleam.toml  manifest.toml
lib/: drivers.ml  problem.ml
src/aoc_2020/: day_1.gleam
